Enable SecurityTest